commit april 5th

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -68,14 +68,14 @@
 									<td>Email</td>
 									<td>
 
-										<input type="text" th:field="*{username}" class="form-control" />
+										<input type="text" th:field="*{email}" class="form-control" />
 									</td>
 								</tr>
 								<tr>
 									<td>Username</td>
 									<td>
 
-										<input type="text" th:field="*{username}" class="form-control" />
+										<input type="text" th:field="*{userName}" class="form-control" />
 									</td>
 								</tr>
 								<tr>
